--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
-    "react": "16.8.4",
+    "react": "^16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.4",
+    "react-dom": "^16.8.4",
     "react-scripts": "2.1.3",
+    "reactstrap": "^9.1.10",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
   },
